@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Mon Mar 26 21:46:10 CEST 2012
-build.number=470
+#Tue Jun 26 12:49:17 CEST 2012
+build.number=471
